Integrate APis and categories

--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
       <div class="header">
         <img src="./assets/jeopardy_logo.svg" alt="Jeopardy Game" />
       </div>
+      <main class="content">
+        <div class="cta">
+          <button type="reset" class="reset-button">Reset</button>
+          <h2 class="score-title">Your Score :</h2>
+          <h3 class="your-score">0</h3>
+        </div>
+        <div class="board">
+          <!-- board content injected here -->
+        </div>
+        <div class="question-modal">
+          <form>
+            <h2 class="question-title">Question</h2>
+            <p>Give answer</p>
+            <input type="text" name="answer" id="answer" class="answer-box" />
+            <button type="submit"></button>
+          </form>
+        </div>
+      </main>
+      <footer class="footer">
+        <p>Created and developed by: Aakash Patel & Ashika Trambadiya</p>
+      </footer>
     </div>
   </body>
 </html>
