Sample board html and css added

--- a/index.html
+++ b/index.html
@@ -15,31 +15,75 @@
     <script src="./js/aakash_ashika.js"></script>
   </head>
   <body>
+    <header class="header">
+      <img src="./assets/jeopardy_logo.svg" alt="Jeopardy Game" />
+    </header>
     <div class="container">
-      <div class="header">
-        <img src="./assets/jeopardy_logo.svg" alt="Jeopardy Game" />
-      </div>
       <main class="content">
         <div class="cta">
           <button type="reset" class="reset-button">Reset</button>
-          <h2 class="score-title">Your Score :</h2>
-          <h3 class="your-score">0</h3>
+          <div class="score">
+            <h2 class="score-title">
+              Your Score :
+              <h3 class="your-score">0</h3>
+            </h2>
+          </div>
         </div>
         <div class="board">
           <!-- board content injected here -->
+          <ul class="category">
+            <li class="category-heading">Category-1</li>
+            <li class="category-item"><button>$100</button></li>
+            <li class="category-item"><button>$200</button></li>
+            <li class="category-item"><button>$300</button></li>
+            <li class="category-item"><button>$400</button></li>
+            <li class="category-item"><button>$500</button></li>
+          </ul>
+          <ul class="category">
+            <li class="category-heading">Category-2</li>
+            <li class="category-item"><button>$100</button></li>
+            <li class="category-item"><button>$200</button></li>
+            <li class="category-item"><button>$300</button></li>
+            <li class="category-item"><button>$400</button></li>
+            <li class="category-item"><button>$500</button></li>
+          </ul>
+          <ul class="category">
+            <li class="category-heading">Category-3</li>
+            <li class="category-item"><button>$100</button></li>
+            <li class="category-item"><button>$200</button></li>
+            <li class="category-item"><button>$300</button></li>
+            <li class="category-item"><button>$400</button></li>
+            <li class="category-item"><button>$500</button></li>
+          </ul>
+          <ul class="category">
+            <li class="category-heading">Category-4</li>
+            <li class="category-item"><button>$100</button></li>
+            <li class="category-item"><button>$200</button></li>
+            <li class="category-item"><button>$300</button></li>
+            <li class="category-item"><button>$400</button></li>
+            <li class="category-item"><button>$500</button></li>
+          </ul>
+          <ul class="category">
+            <li class="category-heading">Category-5</li>
+            <li class="category-item"><button>$100</button></li>
+            <li class="category-item"><button>$200</button></li>
+            <li class="category-item"><button>$300</button></li>
+            <li class="category-item"><button>$400</button></li>
+            <li class="category-item"><button>$500</button></li>
+          </ul>
         </div>
-        <div class="question-modal">
+        <!-- <div class="question-modal">
           <form>
             <h2 class="question-title">Question</h2>
             <p>Give answer</p>
             <input type="text" name="answer" id="answer" class="answer-box" />
             <button type="submit"></button>
           </form>
-        </div>
+        </div> -->
       </main>
-      <footer class="footer">
-        <p>Created and developed by: Aakash Patel & Ashika Trambadiya</p>
-      </footer>
     </div>
+    <footer class="footer">
+      <p>Created and developed by: Aakash Patel & Ashika Trambadiya</p>
+    </footer>
   </body>
 </html>
