Completed building board

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     <div class="container">
       <main class="content">
         <div class="cta">
-          <button type="reset" class="reset-button">Reset</button>
+          <button type="reset" class="reset-button" id="reset-board">
+            Reset
+          </button>
           <div class="score">
             <h2 class="score-title">
               Your Score :
-              <h3 class="your-score">0</h3>
+              <h3 class="your-score" id="your-score">0</h3>
             </h2>
           </div>
         </div>
